# ludwig_ai_test

./: .gitignore  README.md
1_reuters_cli/: model_definition.yaml  reuters-allcats-head.csv  reuters-allcats.meta.json  reuters-allcats.split.csv  reuters-allcats.test.hdf5  reuters-allcats.training.hdf5  reuters-allcats.validation.hdf5  run_1_experiment.sh  run_2_predict.sh  run_3_serve.sh
1_sentiment/: Train.meta.json  Train.split.csv  Train.test.hdf5  Train.validation.hdf5  Valid-head.csv  model_definition.yaml  run_1_experiment.sh  run_2_predict.sh  run_3_serve.sh  run_4_visualize.sh
1_sentiment/results_1_experiment/experiment_run/: description.json  label_predictions.npy  label_probabilities.npy  label_probabilities_0.npy  label_probabilities_1.npy  label_probabilities_<UNK>.npy  label_probability.npy  predictions.parquet  test_statistics.json  training_statistics.json
1_sentiment/results_1_experiment/experiment_run/model/: model_hyperparameters.json  model_weights.index  training_progress.json  training_set_metadata.json
1_sentiment/results_1_experiment/experiment_run/model/training_checkpoints/: checkpoint  ckpt-4.index
1_sentiment/results_2_predict/: label_predictions.npy  label_probabilities.npy  label_probabilities_0.npy  label_probabilities_1.npy  label_probabilities_<UNK>.npy  label_probability.npy  predictions.parquet
2_python_api/: Test-head.csv  deploy_model.py  pyproject.toml  run_1_build_img.sh  run_2_run_cont.sh
3_service/: Dockerfile  main.py  pyproject.toml  run_1_build_img.sh  run_2_run_cont.sh
(+3 files in other folders)
