[tool.poetry]
name = "fastapi_service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ludwig = "^0.4"
petastorm = "^0.11.3"
tensorflow-cpu = "^2.6.0"
fastapi = "^0.70.1"
uvicorn = "^0.17.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
